[tool.poetry]
name = "server-python"
version = "0.1.0"
description = ""
authors = ["Tom <tom@temper.systems>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
temper-validation-demo = {path = "../temper/temper.out/py/temper-validation-demo", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
